--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -13,8 +13,12 @@
                {% if pages %}
                <ul>
                    {% for page in pages %}
-                   <li><a href="{{ page.url }}">{{page.title}}</a></li>
+                   <li>
+                       <a href="{{ page.url }}">{{page.title}}</a>
+
+                   </li>
                    {% endfor %}
+                   <a href="/rango/">Index</a><br />
                </ul>
                {% else %}
                <strong>No pages currently in category.</strong>
