--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -43,7 +43,7 @@
             {% endif %}
         </div>
 
-        <div><a href="/rango/about/">About Rango</a><br />
+        <div><a href="/rango/add_category/">Add a New Category</a><br /><br />
              <img src="{% static 'images/rango.jpg' %}"
                      alt="Picture of Rango" />
         </div>
