--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -13,11 +13,8 @@
             here is the about page. <br />
             <strong>{{ boldmessage }}</strong><br />
         </div>
-                <a href="/rango/index/">Index</a><br />
-                <img src="{{ MEDIA_URL}}cat.jpg" alt="Picture of a Cat" />
-                <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-
-
+            <div><a href="/rango/index/">Index</a><br />
+                <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat."/>
         </div>
     </body>
 </html>
