--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -35,16 +35,17 @@
             {% if pages %}
                 <ul>
                     {% for page in pages %}
-                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                    <li><a href="{{ page.url }}">{{ page.title }}</a> </li>
                     {% endfor %}
                 </ul>
             {% else %}
-                <strong>There are no pages present.</strong>
+                <strong>There are no categories present.</strong>
             {% endif %}
         </div>
 
-        <div><a href="/rango/about/">About Rango</a><br />
-             <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+        <div><a href="/rango/add_category/">Add a New Category</a><br /><br />
+             <img src="{% static 'images/rango.jpg' %}"
+                     alt="Picture of Rango" />
         </div>
     </body>
 
