--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -1,20 +1,19 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load static %}
 
-{% load staticfiles%}
+{% block title_block %}
+    About Rango
+{% endblock %}
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% block body_block %}
+    <h1>Rango says..</h1>
+    <div>
+            hey there partner! <br />
+            <strong>This tutorial has been put together by Yiting</strong><br />
+    </div>
 
-    <body>
-        <h1>Rango says...</h1>
-        <div>
-            here is the about page. <br />
-            <strong>{{ boldmessage }}</strong><br />
-        </div>
-            <div><a href="/rango/index/">Index</a><br />
-                <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat."/>
-        </div>
-    </body>
-</html>
+    <div>
+
+            <img src="{{MEDIA_URL}}cat.jpg" alt="Picture of cat"/>
+    </div>
+{% endblock %}
