--- a/tango_with_django_project/templates/rango/add_category.html
+++ b/tango_with_django_project/templates/rango/add_category.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<head>
-    <title>Rango</title>
-</head>
-<body>
+{% block title_block %}
+     Add a Category
+{% endblock %}
+
+
+{% block body_block %}
     <h1>Add a Category</h1>
     <div>
         <form id="category_form" method="post" action="/rango/add_category/">
@@ -18,8 +20,7 @@
                 {{ field.help_text }}
                 {{ field }}
             {% endfor %}
-            <input type="submit" name="submit" value="Create Category" />
+            <input type="submit" name="submit" value="Create a Category" />
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
