--- a/tango_with_django_project/templates/rango/add_page.html
+++ b/tango_with_django_project/templates/rango/add_page.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-    <body>
+{% block title_block %}
+   Add a Page
+{% endblock %}
+{% block body_block %}
         <h1>Add a Page to {{ category.slug }}</h1>
         <div>
             <form id="category_form" method="post" action="/rango/category/django/add_page/">
@@ -17,8 +17,7 @@
                     {{ field.help_text }}
                     {{ field }}
                 {% endfor %}
-                <input type="submit" name="submit" value="Add Page" />
+                <input type="submit" name="submit" value="Add a Page" />
             </form>
         </div>
-    </body>
-</html>
+{% endblock %}
