--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -1,52 +1,49 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 
 {% load staticfiles %}
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% block title_block %}
+    Homepage
+{% endblock %}
 
-    <body>
-        <h1>Rango says...</h1>
-        <div>
-            hey there partner! <br />
-            <strong>{{ boldmessage }}</strong><br />
-        </div>
+{% block body_block %}
+    <h1>Rango says...</h1>
+    <div>
+        hey there partner! <br/>
+        <strong>{{ boldmessage }}</strong><br/>
+    </div>
 
-        <div>
-            <div><h2>Most Liked Categories</h2></div>
+    <div>
+        <div><h2>Most Liked Categories</h2></div>
 
-            {% if categories %}
-                <ul>
-                    {% for category in categories %}
-                        <li>
-                            <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
-            {% else %}
-                   <strong>There are no categories present.</strong>
-            {% endif %}
-        </div>
+        {% if categories %}
+            <ul>
+                {% for category in categories %}
+                    <li>
+                        <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no categories present.</strong>
+        {% endif %}
+    </div>
 
-        <div>
-            <div><h2>Most Viewed Pages</h2></div>
-            {% if pages %}
-                <ul>
-                    {% for page in pages %}
-                    <li><a href="{{ page.url }}">{{ page.title }}</a> </li>
-                    {% endfor %}
-                </ul>
-            {% else %}
-                <strong>There are no categories present.</strong>
-            {% endif %}
-        </div>
+    <div>
+        <div><h2>Most Viewed Pages</h2></div>
+        {% if pages %}
+            <ul>
+                {% for page in pages %}
+                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no categories present.</strong>
+        {% endif %}
 
-        <div><a href="/rango/add_category/">Add a New Category</a><br /><br />
-             <img src="{% static 'images/rango.jpg' %}"
-                     alt="Picture of Rango" />
-        </div>
-    </body>
-
-</html>
+    </div>
+        <a href="{% url 'rango:about' %}">About</a>
+        <div><a href="/rango/add_category/">Add a New Category</a><br/><br/>
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango"/>
+    </div>
+{% endblock %}
