--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -9,8 +9,13 @@
 {% block body_block %}
     <h1>Rango says...</h1>
     <div>
+    {% if user.is_authenticated %}
+        howdy {{ user.username }}!
+    {% else %}
         hey there partner! <br/>
         <strong>{{ boldmessage }}</strong><br/>
+    {% endif %}
+
     </div>
 
     <div>
@@ -43,7 +48,10 @@
 
     </div>
         <a href="{% url 'rango:about' %}">About</a>
-        <div><a href="/rango/add_category/">Add a New Category</a><br/><br/>
-        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango"/>
+        {% if user.is_authenticated %}
+            <li><a href="{% url 'rango:add_category' %}">Add New Category</a></li>
+        {% endif %}
+
     </div>
+    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango"/>
 {% endblock %}
