--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -13,7 +13,7 @@
     </div>
 
     <div>
-
+            <p>Visits: {{ visits}}</p>
             <img src="{{MEDIA_URL}}cat.jpg" alt="Picture of cat"/>
     </div>
 {% endblock %}
