--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -1,19 +1,20 @@
-{% extends 'rango/base.html' %}
-{% load static %}
+<!DOCTYPE html>
 
-{% block title_block %}
-    About Rango
-{% endblock %}
+{% load staticfiles%}
 
-{% block body_block %}
-    <h1>Rango says..</h1>
-    <div>
-            hey there partner! <br />
-            <strong>This tutorial has been put together by Yiting</strong><br />
-    </div>
+<html>
+    <head>
+        <title>Rango</title>
+    </head>
 
-    <div>
-            <p>Visits: {{ visits}}</p>
-            <img src="{{MEDIA_URL}}cat.jpg" alt="Picture of cat"/>
-    </div>
-{% endblock %}
+    <body>
+        <h1>Rango says...</h1>
+        <div>
+            here is the about page. <br />
+            <strong>{{ boldmessage }}</strong><br />
+        </div>
+            <div><a href="/rango/index/">Index</a><br />
+                <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat."/>
+        </div>
+    </body>
+</html>
