--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -1,57 +1,51 @@
-{% extends 'rango/base.html' %}
+<!DOCTYPE html>
 
 {% load staticfiles %}
 
-{% block title_block %}
-    Homepage
-{% endblock %}
+<html>
+    <head>
+        <title>Rango</title>
+    </head>
 
-{% block body_block %}
-    <h1>Rango says...</h1>
-    <div>
-    {% if user.is_authenticated %}
-        howdy {{ user.username }}!
-    {% else %}
-        hey there partner! <br/>
-        <strong>{{ boldmessage }}</strong><br/>
-    {% endif %}
+    <body>
+        <h1>Rango says...</h1>
+        <div>
+            hey there partner! <br />
+            <strong>{{ boldmessage }}</strong><br />
+        </div>
 
-    </div>
+        <div>
+            <div><h2>Most Liked Categories</h2></div>
 
-    <div>
-        <div><h2>Most Liked Categories</h2></div>
+            {% if categories %}
+                <ul>
+                    {% for category in categories %}
+                        <li>
+                            <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                   <strong>There are no categories present.</strong>
+            {% endif %}
+        </div>
 
-        {% if categories %}
-            <ul>
-                {% for category in categories %}
-                    <li>
-                        <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
-                    </li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <strong>There are no categories present.</strong>
-        {% endif %}
-    </div>
-
-    <div>
-        <div><h2>Most Viewed Pages</h2></div>
-        {% if pages %}
-            <ul>
-                {% for page in pages %}
+        <div>
+            <div><h2>Most Viewed Pages</h2></div>
+            {% if pages %}
+                <ul>
+                    {% for page in pages %}
                     <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <strong>There are no categories present.</strong>
-        {% endif %}
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <strong>There are no pages present.</strong>
+            {% endif %}
+        </div>
 
-    </div>
-        <a href="{% url 'rango:about' %}">About</a>
-        {% if user.is_authenticated %}
-            <li><a href="{% url 'rango:add_category' %}">Add New Category</a></li>
-        {% endif %}
+        <div><a href="/rango/about/">About Rango</a><br />
+             <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+        </div>
+    </body>
 
-    </div>
-    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango"/>
-{% endblock %}
+</html>
